[package]
name = "skim-pick"
description = "Quickly call out to Skim to get user selection"
authors = ["Robin Forbes"]
version = "0.1.2"
repository = "https://github.com/rosofo/skim-pick"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
skim = "0.10.4"
